# point-cloud-lib

./: .gitignore  README.md  global.py  icp.py  kitti2pcl.py  kitti_struct.py  kitti_to_pcl.py  kitti_to_ply.py  requirements.txt  visualization.py
common/: kitt2voxel.ipynb  visualization.py  voxel_example.ipynb
data/global/: 0000000000.ply  0000000001.ply  0000000002.ply  0000000003.ply  0000000004.ply  0000000005.ply  0000000006.ply  0000000007.ply  0000000008.ply  0000000009.ply  0000000010.ply  0000000011.ply  0000000012.ply  0000000013.ply  0000000014.ply  0000000015.ply  0000000016.ply  0000000017.ply  0000000018.ply  0000000019.ply  0000000020.ply  0000000021.ply  0000000022.ply  0000000023.ply  0000000024.ply  0000000025.ply  0000000026.ply  0000000027.ply  0000000028.ply  0000000029.ply  0000000030.ply  0000000031.ply  0000000032.ply  0000000033.ply  0000000034.ply  0000000035.ply  0000000036.ply  0000000037.ply  0000000038.ply  0000000039.ply  (+71 more)
data/innovation/: 0000000000.ply  0000000001.ply  (+105 more)
drafts/: visualization.py
drafts/knn_icp_cpp/: CMakeLists.txt
drafts/knn_icp_cpp/core/: pc_encoder.cpp  pc_utils.hpp
experiment/: experiment.ods
media/: README.md
mov_rm/: kitti2scan.py  remover.py  scan_diff.py  update_py3dtk.txt
registration/: icp.py
registrations/: multiway_registration_2.pcd  multiway_registration_3.pcd  multiway_registration_4.pcd
src/: README.md  kitti_struct.py
src/eucl_dist_cpp/: CMakeLists.txt  Makefile  kdtree  kdtree.cpp  pc_main
src/eucl_dist_cpp/core/: eucl_search.cpp  pc_encoder.cpp  pc_utils.cpp  pc_utils.hpp
(+515 files in other folders)
